[project]
name = "malicious-url-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cloudpickle==2.2.1",
    "flask>=3.1.1",
    "googlesearch-python>=1.3.0",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "scikit-learn==1.1.3",
    "whois>=1.20240129.2",
]
